// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it disables the add to cart button when the talon indicates 1`] = `
<form
  className="root"
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <section
    className="title"
  >
    <h1
      className="productName"
    >
      Flux Capacitor
    </h1>
    <p
      className="productPrice"
    >
      <div />
    </p>
  </section>
  <section
    className="imageCarousel"
  >
    <ProductImageCarousel
      images={Array []}
    />
  </section>
  <FormError
    classes={
      Object {
        "root": "formErrors",
      }
    }
    errors={Array []}
  />
  <section
    className="options"
  >
    ProductOptions
  </section>
  <section
    className="quantity"
  >
    <h2
      className="quantityTitle"
    >
      Quantity
    </h2>
    QuantityFields
  </section>
  <section
    className="cartActions"
  >
    <button
      className="root_highPriority"
      disabled={true}
      type="submit"
    >
      <span
        className="content"
      >
        Add to Cart
      </span>
    </button>
  </section>
  <section
    className="description"
  >
    <h2
      className="descriptionTitle"
    >
      Product Description
    </h2>
    <RichText
      content="Powers the Delorean"
    />
  </section>
  <section
    className="details"
  >
    <h2
      className="detailsTitle"
    >
      SKU
    </h2>
    <strong>
      BTTF123
    </strong>
  </section>
</form>
`;

exports[`it does not render options if the product is not a ConfigurableProduct and have weight 1`] = `
<form
  className="root"
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <section
    className="title"
  >
    <h1
      className="productName"
    >
      Flux Capacitor
    </h1>
    <p
      className="productPrice"
    >
      <div />
    </p>
  </section>
  <section
    className="imageCarousel"
  >
    <ProductImageCarousel
      images={Array []}
    />
  </section>
  <FormError
    classes={
      Object {
        "root": "formErrors",
      }
    }
    errors={Array []}
  />
  <section
    className="options"
  />
  <section
    className="quantity"
  >
    <h2
      className="quantityTitle"
    >
      Quantity
    </h2>
    QuantityFields
  </section>
  <section
    className="cartActions"
  >
    <button
      className="root_highPriority"
      disabled={false}
      type="submit"
    >
      <span
        className="content"
      >
        Add to Cart
      </span>
    </button>
  </section>
  <section
    className="description"
  >
    <h2
      className="descriptionTitle"
    >
      Product Description
    </h2>
    <RichText
      content="Powers the Delorean"
    />
  </section>
  <section
    className="details"
  >
    <h2
      className="detailsTitle"
    >
      SKU
    </h2>
    <strong>
      BTTF123
    </strong>
  </section>
</form>
`;

exports[`it render VirtualProduct if product type is virtual 1`] = `
<form
  className="root"
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <section
    className="title"
  >
    <h1
      className="productName"
    >
      Flux Capacitor
    </h1>
    <p
      className="productPrice"
    >
      <div />
    </p>
  </section>
  <section
    className="imageCarousel"
  >
    <ProductImageCarousel
      images={Array []}
    />
  </section>
  <FormError
    classes={
      Object {
        "root": "formErrors",
      }
    }
    errors={Array []}
  />
  <section
    className="options"
  />
  <section
    className="quantity"
  >
    <h2
      className="quantityTitle"
    >
      Quantity
    </h2>
    QuantityFields
  </section>
  <section
    className="cartActions"
  >
    <button
      className="root_highPriority"
      disabled={false}
      type="submit"
    >
      <span
        className="content"
      >
        Add to Cart
      </span>
    </button>
  </section>
  <section
    className="description"
  >
    <h2
      className="descriptionTitle"
    >
      Product Description
    </h2>
    <RichText
      content="Powers the Delorean"
    />
  </section>
  <section
    className="details"
  >
    <h2
      className="detailsTitle"
    >
      SKU
    </h2>
    <strong>
      BTTF123
    </strong>
  </section>
</form>
`;

exports[`it renders an error for an invalid user token when adding to cart 1`] = `
<form
  className="root"
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <section
    className="title"
  >
    <h1
      className="productName"
    >
      Flux Capacitor
    </h1>
    <p
      className="productPrice"
    >
      <div />
    </p>
  </section>
  <section
    className="imageCarousel"
  >
    <ProductImageCarousel
      images={Array []}
    />
  </section>
  <FormError
    classes={
      Object {
        "root": "formErrors",
      }
    }
    errors={
      Array [
        [Error: There was a problem with your cart. Please sign in again and try adding the item once more.],
      ]
    }
  />
  <section
    className="options"
  >
    ProductOptions
  </section>
  <section
    className="quantity"
  >
    <h2
      className="quantityTitle"
    >
      Quantity
    </h2>
    QuantityFields
  </section>
  <section
    className="cartActions"
  >
    <button
      className="root_highPriority"
      disabled={false}
      type="submit"
    >
      <span
        className="content"
      >
        Add to Cart
      </span>
    </button>
  </section>
  <section
    className="description"
  >
    <h2
      className="descriptionTitle"
    >
      Product Description
    </h2>
    <RichText
      content="Powers the Delorean"
    />
  </section>
  <section
    className="details"
  >
    <h2
      className="detailsTitle"
    >
      SKU
    </h2>
    <strong>
      BTTF123
    </strong>
  </section>
</form>
`;

exports[`it renders breadcrumbs if there is a breadcrumb category id 1`] = `
Array [
  <Breadcrumbs
    categoryId={25}
    currentProduct="Flux Capacitor"
  />,
  <form
    className="root"
    onKeyDown={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <section
      className="title"
    >
      <h1
        className="productName"
      >
        Flux Capacitor
      </h1>
      <p
        className="productPrice"
      >
        <div />
      </p>
    </section>
    <section
      className="imageCarousel"
    >
      <ProductImageCarousel
        images={Array []}
      />
    </section>
    <FormError
      classes={
        Object {
          "root": "formErrors",
        }
      }
      errors={Array []}
    />
    <section
      className="options"
    >
      ProductOptions
    </section>
    <section
      className="quantity"
    >
      <h2
        className="quantityTitle"
      >
        Quantity
      </h2>
      QuantityFields
    </section>
    <section
      className="cartActions"
    >
      <button
        className="root_highPriority"
        disabled={false}
        type="submit"
      >
        <span
          className="content"
        >
          Add to Cart
        </span>
      </button>
    </section>
    <section
      className="description"
    >
      <h2
        className="descriptionTitle"
      >
        Product Description
      </h2>
      <RichText
        content="Powers the Delorean"
      />
    </section>
    <section
      className="details"
    >
      <h2
        className="detailsTitle"
      >
        SKU
      </h2>
      <strong>
        BTTF123
      </strong>
    </section>
  </form>,
]
`;

exports[`it renders field level errors for quantity - message 1 1`] = `
<form
  className="root"
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <section
    className="title"
  >
    <h1
      className="productName"
    >
      Flux Capacitor
    </h1>
    <p
      className="productPrice"
    >
      <div />
    </p>
  </section>
  <section
    className="imageCarousel"
  >
    <ProductImageCarousel
      images={Array []}
    />
  </section>
  <FormError
    classes={
      Object {
        "root": "formErrors",
      }
    }
    errors={Array []}
  />
  <section
    className="options"
  >
    ProductOptions
  </section>
  <section
    className="quantity"
  >
    <h2
      className="quantityTitle"
    >
      Quantity
    </h2>
    QuantityFields
  </section>
  <section
    className="cartActions"
  >
    <button
      className="root_highPriority"
      disabled={false}
      type="submit"
    >
      <span
        className="content"
      >
        Add to Cart
      </span>
    </button>
  </section>
  <section
    className="description"
  >
    <h2
      className="descriptionTitle"
    >
      Product Description
    </h2>
    <RichText
      content="Powers the Delorean"
    />
  </section>
  <section
    className="details"
  >
    <h2
      className="detailsTitle"
    >
      SKU
    </h2>
    <strong>
      BTTF123
    </strong>
  </section>
</form>
`;

exports[`it renders field level errors for quantity - message 2 1`] = `
<form
  className="root"
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <section
    className="title"
  >
    <h1
      className="productName"
    >
      Flux Capacitor
    </h1>
    <p
      className="productPrice"
    >
      <div />
    </p>
  </section>
  <section
    className="imageCarousel"
  >
    <ProductImageCarousel
      images={Array []}
    />
  </section>
  <FormError
    classes={
      Object {
        "root": "formErrors",
      }
    }
    errors={Array []}
  />
  <section
    className="options"
  >
    ProductOptions
  </section>
  <section
    className="quantity"
  >
    <h2
      className="quantityTitle"
    >
      Quantity
    </h2>
    QuantityFields
  </section>
  <section
    className="cartActions"
  >
    <button
      className="root_highPriority"
      disabled={false}
      type="submit"
    >
      <span
        className="content"
      >
        Add to Cart
      </span>
    </button>
  </section>
  <section
    className="description"
  >
    <h2
      className="descriptionTitle"
    >
      Product Description
    </h2>
    <RichText
      content="Powers the Delorean"
    />
  </section>
  <section
    className="details"
  >
    <h2
      className="detailsTitle"
    >
      SKU
    </h2>
    <strong>
      BTTF123
    </strong>
  </section>
</form>
`;

exports[`it renders field level errors for quantity - message 3 1`] = `
<form
  className="root"
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <section
    className="title"
  >
    <h1
      className="productName"
    >
      Flux Capacitor
    </h1>
    <p
      className="productPrice"
    >
      <div />
    </p>
  </section>
  <section
    className="imageCarousel"
  >
    <ProductImageCarousel
      images={Array []}
    />
  </section>
  <FormError
    classes={
      Object {
        "root": "formErrors",
      }
    }
    errors={Array []}
  />
  <section
    className="options"
  >
    ProductOptions
  </section>
  <section
    className="quantity"
  >
    <h2
      className="quantityTitle"
    >
      Quantity
    </h2>
    QuantityFields
  </section>
  <section
    className="cartActions"
  >
    <button
      className="root_highPriority"
      disabled={false}
      type="submit"
    >
      <span
        className="content"
      >
        Add to Cart
      </span>
    </button>
  </section>
  <section
    className="description"
  >
    <h2
      className="descriptionTitle"
    >
      Product Description
    </h2>
    <RichText
      content="Powers the Delorean"
    />
  </section>
  <section
    className="details"
  >
    <h2
      className="detailsTitle"
    >
      SKU
    </h2>
    <strong>
      BTTF123
    </strong>
  </section>
</form>
`;

exports[`it renders form level errors 1`] = `
<form
  className="root"
  onKeyDown={[Function]}
  onReset={[Function]}
  onSubmit={[Function]}
>
  <section
    className="title"
  >
    <h1
      className="productName"
    >
      Flux Capacitor
    </h1>
    <p
      className="productPrice"
    >
      <div />
    </p>
  </section>
  <section
    className="imageCarousel"
  >
    <ProductImageCarousel
      images={Array []}
    />
  </section>
  <FormError
    classes={
      Object {
        "root": "formErrors",
      }
    }
    errors={
      Array [
        [Error: Could not add item to cart. Please check required options and try again.],
      ]
    }
  />
  <section
    className="options"
  >
    ProductOptions
  </section>
  <section
    className="quantity"
  >
    <h2
      className="quantityTitle"
    >
      Quantity
    </h2>
    QuantityFields
  </section>
  <section
    className="cartActions"
  >
    <button
      className="root_highPriority"
      disabled={false}
      type="submit"
    >
      <span
        className="content"
      >
        Add to Cart
      </span>
    </button>
  </section>
  <section
    className="description"
  >
    <h2
      className="descriptionTitle"
    >
      Product Description
    </h2>
    <RichText
      content="Powers the Delorean"
    />
  </section>
  <section
    className="details"
  >
    <h2
      className="detailsTitle"
    >
      SKU
    </h2>
    <strong>
      BTTF123
    </strong>
  </section>
</form>
`;
